fix navbar in dark mode, add project hover effect

--- a/src/app/styles/navbar.css
+++ b/src/app/styles/navbar.css
@@ -1,52 +1,56 @@
-.navbar-menu {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  color: rgb(103, 103, 103);
-  text-transform: uppercase;
-}
-.navbar-menu li {
-  padding: 0 .5em .25em;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  transition: .3s;
-}
-.navbar-menu li:hover {
-  color: #000;
-}
-.navbar-menu li:before {
-  content: "";
-  position: absolute;
-  inset: calc(100% - 3px) 0 0 0;
-  background: #000;
-  scale: 0 1;
-  transition: .3s, translate 0s .3s;
-}
-.navbar-menu:hover li:before {
-  scale: 1;
-}
-.navbar-menu li:hover:before {
-  translate: 0;
-  transition: .3s;
-}
-.navbar-menu:hover li:has(~ li:hover):before {
-  translate: 100% 0;
-  transition: .2s .2s,scale 0s .4s;
-}
-.navbar-menu:hover li:hover ~ li:before {
-  translate: -100% 0;
-  transition: .2s .2s,scale 0s .4s;
+@media (min-width: 640px) {
+  .navbar-menu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    color: rgb(103, 103, 103);
+    text-transform: uppercase;
+  }
+  .navbar-menu li {
+    padding: 0 0.5em 0.25em;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition: 0.3s;
+  }
+  .navbar-menu li:hover {
+    color: #000;
+  }
+  .navbar-menu li:before {
+    content: "";
+    position: absolute;
+    inset: calc(100% - 3px) 0 0 0;
+    background: #000;
+    scale: 0 1;
+    transition: 0.3s, translate 0s 0.3s;
+  }
+  .navbar-menu:hover li:before {
+    scale: 1;
+  }
+  .navbar-menu li:hover:before {
+    translate: 0;
+    transition: 0.3s;
+  }
+  .navbar-menu:hover li:has(~ li:hover):before {
+    translate: 100% 0;
+    transition: 0.2s 0.2s, scale 0s 0.4s;
+  }
+  .navbar-menu:hover li:hover ~ li:before {
+    translate: -100% 0;
+    transition: 0.2s 0.2s, scale 0s 0.4s;
+  }
 }
 
 /* Dark mode styles */
-/* .dark .navbar-menu {
+.dark .navbar-menu {
   color: lightgrey;
-} */
-.dark .navbar-menu li:before {
-  background: whitesmoke; /* Different color for dark mode */
 }
-.dark .navbar-menu li:hover {
-  color: whitesmoke;
+@media (min-width: 640px) {
+  .dark .navbar-menu li:hover {
+    color: whitesmoke;
+  }
+  .dark .navbar-menu li:before {
+    background: whitesmoke; /* Different color for dark mode */
+  }
 }
